# BA-chatbot

./: .gitignore  LLM.py  Q&A.txt  README.md  changes_cli.py  chat.py  chatRAG.py  content_changes.py  pyproject.toml  run_chat.py  temp_app.py
.devcontainer/: devcontainer.json
Embeddings/Gammelt/: chroma_test.py  embedding.py
Embeddings/whoosh_index/: MAIN_3mrqmiuvqmbxtb4u.seg
Gammelt/Gammelt/: embed_forældre.py  embed_handicaptillaeg.py  embedding.py  whoosh_index.py  whoosh_utils.py
Gammelt/Scraping/: 2025-10-08_embedded_hqe.meta.json
Gammelt/whoosh_index/: _MAIN_1.toc
Scraping/: 2025-10-08  2025-10-08_embedded_hqe.embeddings.npy  app_streamlit_localqa.py  content_changes.py  data_changes.py  embed_hqe_to_npy.py  generate_hqe_questions_.py  local_qa_numpy.py  pydantic_model.py  scrape_content_async.py  scrape_links_async.py
data/2025-08-04/: all_relative_links.txt  links_content_2025-08-04.json
data/2025-08-05/: links_content_2025-08-05.json  links_content_2025-08-05_async.json
data/2025-09-04/: all_relative_links2025-09-04.txt  links_content_2025-09-04.json
data/2025-09-17/: 2025-09-17-HQE.v1.jsonl  all_relative_links_2025-09-17_async.txt  links_content_2025-09-17_async.hqe.v2.small.embeddings.npy.meta.json
data/2025-11-18/: all_relative_links_2025-11-18_async.txt  links_content_2025-11-18_async.json
data/2025-11-20/: links_content_2025-11-20.json
data/2025-12-11/: HQE_2025-12-11.embeddings.npy  HQE_2025-12-11.jsonl  HQE_2025-12-11.meta.json  links_content_2025-12-11.json
docs/: pipeline.md
src/su_bot.egg-info/: PKG-INFO  SOURCES.txt  (+3 more)
(+49 files in other folders)
