[project]
name = "su-bot"
version = "0.1.0"
description = "Pipeline for scraping SU.dk content and running local HQE-based RAG."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "numpy>=1.26",
  "pydantic>=2.7",
  "typer>=0.12",
  "langdetect>=1.0.9",
  "openai>=1.45",
  "playwright>=1.46",
  "streamlit>=1.36",
  "sentence-transformers>=3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "ruff>=0.6",
]

[project.scripts]
su-bot = "su_bot.cli:main"

[tool.rye]
managed = false

[tool.rye.scripts]
install-playwright-chromium = "python -m playwright install chromium"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]

